Remove useless files. add \and command in the style command

--- a/paper/InsightJournal.sty
+++ b/paper/InsightJournal.sty
@@ -15,6 +15,7 @@
 \RequirePackage{pslatex}
 \RequirePackage{verbatim}
 
+\def\and{\unskip~and~}
 
 % Uncomment these two lines to ignore the paper size and make the page 
 % size more like a typical published manual.
