--- a/paper/vtkPoissionReconstruction.tex
+++ b/paper/vtkPoissionReconstruction.tex
@@ -53,8 +53,9 @@ colorlinks,linkcolor={blue},citecolor={blue},urlcolor={blue},
 % At minimum, give your name and an email address.  You can include a
 % snail-mail address if you like.
 
-\author{David Doria}
-\authoraddress{Rensselaer Polytechnic Institute, Troy NY}
+\author{David Doria and Arnaud Gelas}
+%\author{David Doria}
+%\authoraddress{Rensselaer Polytechnic Institute, Troy NY \and Harvard University, Cambridge MA}
 
 
 \begin{document}
