--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 This is a port of Misha Kazhdan's work (http://www.cs.jhu.edu/~misha/Code/PoissonRecon/) to VTK.
+
+NOTE: The normals of the input polydata must be vtkFloatArray, NOT vtkDoubleArray!
